@@ -219,17 +219,26 @@ Scalar WeibullMin::computeEntropy() const
 /* Get the PDFGradient of the distribution */
 Point WeibullMin::computePDFGradient(const Point & point) const
 {
+  const Scalar pdf(computePDF(point));
+  return pdf * computeLogPDFGradient(point);
+}
+
+/* Get the LogPDFGradient of the distribution */
+Point WeibullMin::computeLogPDFGradient(const Point & point) const
+{
   if (point.getDimension() != 1) throw InvalidArgumentException(HERE) << "Error: the given point must have dimension=1, here dimension=" << point.getDimension();
 
-  const Scalar x = point[0] - gamma_;
-  Point pdfGradient(3, 0.0);
-  if (x <= 0.0) return pdfGradient;
-  const Scalar powX = std::pow(x / beta_, alpha_);
-  const Scalar factor = powX / x * std::exp(-powX);
-  pdfGradient[0] = factor * (1.0 + (1.0 - powX) * std::log(powX));
-  pdfGradient[1] = factor * (powX - 1.0) * alpha_ * alpha_ / beta_;
-  pdfGradient[2] = factor * (1.0 - alpha_ + alpha_ * powX) / x * alpha_;
-  return pdfGradient;
+  // If the observation is <= gamma_, the LogPDF is mathematically infinite and constant in a neighborhood.
+  // Its gradient is then conventionally set to 0.
+  Point pdfLogGradient(3, 0.0);
+  if (point[0] <= gamma_) return pdfLogGradient;
+
+  const Scalar y = (point[0] - gamma_) / beta_;
+  const Scalar powY = std::pow(y, alpha_);
+  pdfLogGradient[0] = alpha_ / beta_ * (powY - 1.0);
+  pdfLogGradient[1] = 1.0 / alpha_ + (1.0 - powY) * std::log(y);
+  pdfLogGradient[2] = (1.0 + alpha_ * (powY - 1.0)) / y / beta_;
+  return pdfLogGradient;
 }
 
 /* Get the CDFGradient of the distribution */
@@ -242,8 +251,8 @@ Point WeibullMin::computeCDFGradient(const Point & point) const
   if (x <= 0.0) return cdfGradient;
   const Scalar powX = std::pow(x / beta_, alpha_);
   const Scalar factor = powX * std::exp(-powX);
-  cdfGradient[0] = factor * std::log(x / beta_);
-  cdfGradient[1] = -factor * alpha_ / beta_;
+  cdfGradient[0] = -factor * alpha_ / beta_;
+  cdfGradient[1] = factor * std::log(x / beta_);
   cdfGradient[2] = -factor * alpha_ / x;
   return cdfGradient;
 }
