@@ -27,9 +27,9 @@ ccdf=0.522297
 survival=0.522297
 Inverse survival=class=Point name=Unnamed dimension=1 values=[-0.223897]
 Survival(inverse survival)=0.95
-pdf gradient     =class=Point name=Unnamed dimension=3 values=[0.191956,-0.0891733,0.107263]
+pdf gradient     =class=Point name=Unnamed dimension=3 values=[-0.0891733,0.191956,0.107263]
 pdf gradient (FD)=class=Point name=Unnamed dimension=3 values=[-0.0891733,0.191956,0.107263]
-cdf gradient     =class=Point name=Unnamed dimension=3 values=[-0.0975938,-0.254431,-0.339242]
+cdf gradient     =class=Point name=Unnamed dimension=3 values=[-0.254431,-0.0975938,-0.339242]
 cdf gradient (FD)=class=Point name=Unnamed dimension=3 values=[-0.254431,-0.0975938,-0.339242]
 quantile=class=Point name=Unnamed dimension=1 values=[3.65622]
 cdf(quantile)=0.95
