@@ -1,9 +1,9 @@
 distribution= class=WeibullMin name=WeibullMin dimension=1 beta=1 alpha=2.5 gamma=-1
-Estimated distribution= class=WeibullMin name=WeibullMin dimension=1 beta=0.971272 alpha=2.41399 gamma=-0.978496
+Estimated distribution= class=WeibullMin name=WeibullMin dimension=1 beta=1.00413 alpha=2.49011 gamma=-0.998951
 Default distribution= WeibullMin(beta = 1, alpha = 1, gamma = 0)
 Distribution from parameters= WeibullMin(beta = 1, alpha = 2.5, gamma = -1)
-Estimated weibull= WeibullMin(beta = 0.971272, alpha = 2.41399, gamma = -0.978496)
+Estimated weibull= WeibullMin(beta = 1.00413, alpha = 2.49011, gamma = -0.998951)
 Default weibull= WeibullMin(beta = 1, alpha = 1, gamma = 0)
 WeibullMin from parameters= WeibullMin(beta = 1, alpha = 2.5, gamma = -1)
 Estimated distribution= class=WeibullMin name=WeibullMin dimension=1 beta=4.93038e-30 alpha=1 gamma=2.22045e-16
-Estimated distribution= class=WeibullMin name=WeibullMin dimension=1 beta=2.22022e-14 alpha=1 gamma=0.9999
+Estimated distribution= class=WeibullMin name=WeibullMin dimension=1 beta=9.96954e-05 alpha=1 gamma=1
